fix : responsive on mobile

--- a/app/details/[id]/details.css
+++ b/app/details/[id]/details.css
@@ -117,9 +117,15 @@ body {
         font-size: 20px;
     }
 
-    .message, .timestamp, .sender-name {
+    .timestamp, .sender-name {
         font-size: 14px;
     }
+
+    .message {
+        font-size: 35px;
+    }
+
+
 
     .image-caption {
         font-size: 16px;
